--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -18,7 +18,6 @@ set_real_ip_from 2001:41d0:801:1000::c2;
 set_real_ip_from 2001:41d0:a:2a61::1;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
-set_real_ip_from 2001:41d0:b:4ef::;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
@@ -360,7 +359,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe64:90e3;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -422,6 +420,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
@@ -466,7 +465,6 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
-set_real_ip_from 2a09:6301:0:71:a067:d2f9:48b9:db3f;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -732,6 +730,7 @@ set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:8605:d341:b954:fc51;
 set_real_ip_from 2a0f:e586:f:f:9405:a52b:796f:aff2;
 set_real_ip_from 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
