--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -124,6 +124,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -150,6 +151,7 @@ deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
+deny 135.225.96.187;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
@@ -1046,6 +1048,7 @@ deny 2401:c080:1c02:2d4::;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
+deny 2402:800:6173:ed93:3d5a:6b3d:7bcf:d3c4;
 deny 2407:3640:2207:8882::1;
 deny 24.240.72.170;
 deny 2.56.10.36;
@@ -1266,6 +1269,7 @@ deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2620:95:4007::111;
 deny 27.255.75.198;
+deny 27.76.237.115;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
@@ -1357,7 +1361,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1605,6 +1608,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1619,6 +1623,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1757,6 +1762,7 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
+deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1836,6 +1842,7 @@ deny 45.9.168.22;
 deny 45.94.31.68;
 deny 45.95.169.130;
 deny 45.95.169.16;
+deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.165.243.36;
@@ -1872,7 +1879,6 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1950,6 +1956,7 @@ deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
+deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.183.128;
 deny 84.252.120.131;
