--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -239,7 +239,6 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
-allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -666,16 +665,16 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.218.118.133;
 allow 193.218.118.135;
-allow 193.218.118.158;
+allow 193.218.118.153;
+allow 193.218.118.157;
 allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
-allow 193.218.118.196;
-allow 193.218.118.38;
-allow 193.218.118.52;
+allow 193.218.118.56;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -692,7 +691,6 @@ allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -713,7 +711,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.252;
+allow 198.167.206.201;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1048,7 +1046,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2402:800:6173:ed93:3d5a:6b3d:7bcf:d3c4;
+allow 2402:800:6173:ed93:679c:39b8:68d1:ba6a;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1408,7 +1406,6 @@ allow 2a09:6301:0:71:a067:d2f9:48b9:db3f;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
-allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1608,7 +1605,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1682,11 +1678,9 @@ allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
-allow 2a10:1fc0:10::ce18:9bf9;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:233;
@@ -1762,7 +1756,6 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
-allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1961,7 +1954,6 @@ allow 84.239.46.144;
 allow 84.247.183.128;
 allow 84.252.120.131;
 allow 85.239.41.130;
-allow 85.239.55.172;
 allow 85.93.218.204;
 allow 86.107.101.122;
 allow 86.54.28.49;
